--- a/v/index.html
+++ b/v/index.html
@@ -29,16 +29,7 @@
     color: #1CB614;
   }
 </style>
-<script>
-  function servr(){
-    document.getElementById("icon").classList="a2 bi bi-check-circle"
-  }
-  function call(){
-    window.location.href="https://www.mailr.bmhm.sbs/user?verified"
-  }
-  setTimeout(servr,1300);
-    setTimeout(call,1700)
-
+<script src="v.js">
 </script>
 
 
